--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="cal-container">
         <div id="display">
-
+            <div id="display-div">123</div>
         </div>
         <div id="keys">
             <table>
@@ -44,5 +44,6 @@
             </table>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
