--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <td><span id="key-=">=</span></td>
                 </tr>
             </table>
-        </div>
+        </div>̀
     </div>
     <script src="script.js"></script>
 </body>
