--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="keys">
             <table>
                 <tr>
-                    <td><span id="key-ac">AC</span></span></td>
+                    <td><span id="key-ac">AC</span></td>
                     <td><span id="key-2">+/-</span></td>
                     <td><span id="key-%">%</span></td>
                     <td><span id="key-/">/</span></td>
