--- a/index.html
+++ b/index.html
@@ -8,38 +8,38 @@
 <body>
     <div id="cal-container">
         <div id="display">
-            <div id="display-div">123</div>
+            <div id="display-div"></div>
         </div>
         <div id="keys">
             <table>
                 <tr>
-                    <td><span id="key-ac">AC</span></td>
-                    <td><span id="key-2">+/-</span></td>
-                    <td><span id="key-%">%</span></td>
-                    <td><span id="key-/">/</span></td>
+                    <td><span>AC</span></td>
+                    <td><span>+/-</span></td>
+                    <td><span>%</span></td>
+                    <td><span>/</span></td>
                 </tr>
                 <tr>
-                    <td><span id="key-7">7</span></td>
-                    <td><span id="key-8">8</span></td>
-                    <td><span id="key-9">9</span></td>
-                    <td><span id="key-*">*</span></td>
+                    <td><span>7</span></td>
+                    <td><span>8</span></td>
+                    <td><span>9</span></td>
+                    <td><span>*</span></td>
                 </tr>
                 <tr>
-                    <td><span id="key-4">4</span></td>
-                    <td><span id="key-5">5</span></td>
-                    <td><span id="key-6">6</span></td>
-                    <td><span id="key--">-</span></td>
+                    <td><span>4</span></td>
+                    <td><span>5</span></td>
+                    <td><span>6</span></td>
+                    <td><span>-</span></td>
                 </tr>
                 <tr>
-                    <td><span id="key-1">1</span></td>
-                    <td><span id="key-2">2</span></td>
-                    <td><span id="key-3">3</span></td>
-                    <td><span id="key-+">+</span></td>
+                    <td><span>1</span></td>
+                    <td><span>2</span></td>
+                    <td><span>3</span></td>
+                    <td><span>+</span></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><span id="key-0">0</span></td>
-                    <td><span id="key-.">.</span></td>
-                    <td><span id="key-=">=</span></td>
+                    <td colspan="2"><span>0</span></td>
+                    <td><span>.</span></td>
+                    <td><span>=</span></td>
                 </tr>
             </table>
         </div>
