--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="cal-container">
         <div id="display">
             <div id="display-div"></div>
+            <div id="eval-dis"></div>
         </div>
         <div id="keys">
             <table>
